--- a/.gitignore
+++ b/.gitignore
@@ -32,14 +32,14 @@ classes/
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
-*.jar
+# Package Files
 *.war
 *.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
+copy.bat
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
