--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,10 @@ plugins {
 	id 'maven-publish'
 }
 
+apply plugin: 'maven-publish'
+
 version = project.mod_version
-group = project.maven_group
+group = 'com.github.VeryWeirdUser'
 
 base {
 	archivesName = "funtime_utils"
